--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "stripe": "^16.6.0",
     "body-parser": "^1.20.2"
   }
 }
